// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project jadwal_sa {
  database_type: 'SQLite'
  Note: 'Penjadwalan mata kuliah menggunakan Simulated Annealing'
}

// Blok waktu 45 menit
Table timeslots {
  id integer [pk, increment]
  hari integer [not null, note: '1: Senin, 2: Selasa, 3: Rabu, 4: Kamis, 5: Jumat, 6: Sabtu, 7: Minggu']
  mulai text [not null, note: 'HH:MM']
  selesai text [not null, note: 'HH:MM']
}

Table pengajar {
  id text [pk, not null]
  nama text [not null]
  jenis text [not null, default: 'dosen', note: 'dosen / asdos']
  preferensi_waktu text [note: 'comma-separated array of integers representing non-preferred days (1-7)']
}

Table ruangan {
  id integer [pk, increment]
  nama text [unique, not null]

  // jenis: 'teori', 'praktek'
  jenis text [not null, default: 'teori', note: 'Untuk membedakan perkuliahan di ruang kelas dengan di laboratorium']
}

// Table preferensi_waktu {
//   Note: 'Hapus semua preferensi waktu dari seorang pengajar apabila pengajar tersebut dihapus dari tabel induk'
//   id integer [pk, increment]
//   pengajar_id integer [not null]
//   //waktu_id integer [not null, ref: > waktu.id]
//   //hindari bool [not null, default: true]
//   hari integer [not null, note: '1: Senin, 2: Selasa, 3: Rabu, 4: Kamis, 5: Jumat, 6: Sabtu, 7: Minggu']
//   //mulai text [not null, note: 'HH:MM']
//   //selesai text [not null, note: 'HH:MM']
// }
//
// Ref {
//   preferensi_waktu.pengajar_id > pengajar.id [delete: cascade, update: no action]
// }

Table mata_kuliah {
  id integer [pk, increment]
  nama text [not null, note: "Misal: 'Teori Basis Data', 'Praktikum Basis Data'"]
  jenis text [not null]
  sks integer [not null, note: "Jumlah blok 45 menit"]
  semester integer [not null]
  jumlah_kelas integer [not null]
  pengajar_id integer [ref: > pengajar.id]
}

Table jadwal {
  id integer [pk, increment]
  komponen_mk_id integer [not null, ref: > komponen_mk.id]
  pengajar_id integer [not null, ref: > pengajar.id]
  kelas char [not null, note: 'contoh: A, B, C']
  ruangan_id integer [not null, ref: > ruangan.id]

  // jenis text [not null, default: 'teori']

  sesi_ke integer [not null, note: "Sesi ke-berapa untuk praktikum. Contoh: 1, 2"]

  waktu_id_start integer [not null, ref: > waktu.id]
  durasi_blok integer [not null]

  daring bool [not null, default: false]
}
